Corrections collapses

--- a/src/components/Collapse/Collapse.module.scss
+++ b/src/components/Collapse/Collapse.module.scss
@@ -34,24 +34,10 @@
   }
 
   .desc {
-    opacity: 0;
-    transition: opacity 0.5s ease;
     font-size: 19px;
+    padding: 20px;
     background-color: rgb(252, 249, 249);
-
-    &.descOpen {
-      opacity: 1;
-      animation: slideFromTop 0.6s ease;
-      padding: 20px;
-    }
-
-    &.descClosed {
-      opacity: 0;
-      animation: slideToTop 0.5s ease;
-      padding: 20px;
-      max-height: 0;
-      overflow: hidden;
-    }
+    animation: slideFromTop 0.6s ease;
   }
 
 }
