--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -10,6 +10,7 @@
     .collapses {
         display: flex;
         flex-direction: column;
-        margin-bottom: 15px;
+        gap: 25px;
+        margin-bottom: 25px;
     }
 }
